--- a/package.json
+++ b/package.json
@@ -18,6 +18,11 @@
     "vuex": "^3.1.1",
     "node-sass": "^4.13.0",
     "sass-loader": "^8.0.0",
-    "style-resources-loader": "^1.2.1"
+    "style-resources-loader": "^1.2.1",
+    "colors": "^1.3.3",
+    "gulp": "^4.0.2",
+    "gulp-load-plugins": "^1.2.4",
+    "gulp-plumber": "^1.2.0",
+    "gulp-svg-sprite": "^1.5.0"
   }
 }
