--- a/package.json
+++ b/package.json
@@ -15,14 +15,15 @@
     "vimeo": "^2.1.1"
   },
   "devDependencies": {
-    "vuex": "^3.1.1",
-    "node-sass": "^4.13.0",
-    "sass-loader": "^8.0.0",
-    "style-resources-loader": "^1.2.1",
+    "@gridsome/source-datocms": "^0.2.1",
     "colors": "^1.3.3",
     "gulp": "^4.0.2",
     "gulp-load-plugins": "^1.2.4",
     "gulp-plumber": "^1.2.0",
-    "gulp-svg-sprite": "^1.5.0"
+    "gulp-svg-sprite": "^1.5.0",
+    "node-sass": "^4.13.0",
+    "sass-loader": "^8.0.0",
+    "style-resources-loader": "^1.2.1",
+    "vuex": "^3.1.1"
   }
 }
