--- a/package.json
+++ b/package.json
@@ -7,12 +7,13 @@
     "explore": "gridsome explore"
   },
   "dependencies": {
-    "gridsome": "^0.7.0",
-    "current-device": "^0.10.0",
-    "vue-infinite-loading": "^2.4.4",
-    "vue2-touch-events": "^2.1.0",
+    "@gridsome/plugin-sitemap": "^0.2.3",
     "@vimeo/player": "^2.10.0",
-    "vimeo": "^2.1.1"
+    "current-device": "^0.10.0",
+    "gridsome": "^0.7.0",
+    "vimeo": "^2.1.1",
+    "vue-infinite-loading": "^2.4.4",
+    "vue2-touch-events": "^2.1.0"
   },
   "devDependencies": {
     "@gridsome/source-wordpress": "^0.5.2",
