--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@vimeo/player": "^2.10.0",
     "current-device": "^0.10.0",
     "gridsome": "^0.7.0",
+    "gridsome-plugin-robots-txt": "^1.0.2",
     "vimeo": "^2.1.1",
     "vue-infinite-loading": "^2.4.4",
     "vue2-touch-events": "^2.1.0"
