--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "explore": "gridsome explore"
   },
   "dependencies": {
+    "@gridsome/plugin-critical": "^0.1.6",
     "@gridsome/plugin-sitemap": "^0.2.3",
     "@vimeo/player": "^2.10.0",
     "current-device": "^0.10.0",
