--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "gridsome": "^0.7.0",
     "gridsome-plugin-robots-txt": "^1.0.2",
     "vimeo": "^2.1.1",
+    "vue-awesome-swiper": "^3.1.3",
     "vue-infinite-loading": "^2.4.4",
     "vue2-touch-events": "^2.1.0"
   },
