--- a/package.json
+++ b/package.json
@@ -21,11 +21,14 @@
   "devDependencies": {
     "@gridsome/source-wordpress": "^0.5.2",
     "colors": "^1.3.3",
+    "gridsome-plugin-pug": "0.0.3",
     "gulp": "^4.0.2",
     "gulp-load-plugins": "^1.2.4",
     "gulp-plumber": "^1.2.0",
     "gulp-svg-sprite": "^1.5.0",
     "node-sass": "^4.13.0",
+    "pug": "^2.0.4",
+    "pug-plain-loader": "^1.0.0",
     "sass-loader": "^8.0.0",
     "style-resources-loader": "^1.2.1",
     "vuex": "^3.1.1"
