--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "gulp-load-plugins": "^1.2.4",
     "gulp-plumber": "^1.2.0",
     "gulp-svg-sprite": "^1.5.0",
+    "node-sass": "^4.13.1",
     "pug": "^2.0.4",
     "pug-plain-loader": "^1.0.0",
     "sass-loader": "^8.0.2",
