--- a/netlify.toml
+++ b/netlify.toml
@@ -19,7 +19,7 @@
   GRIDSOME_WP_PREPROD_URL = ""
   GRIDSOME_WP_PERSO_URL = "https://vdillyprod.tech/rabbit/admin"
   GRIDSOME_WP_LOCAL_URL = "http://wordpress.local"
-  GRIDSOME_WP_FRAMEWORK_URL = "http://wordpress.local"
+  GRIDSOME_WP_FRAMEWORK_URL = "https://vdillyprod.tech/rabbit/admin"
 
 # Redirects and headers are GLOBAL for all builds – they do not get scoped to
 # contexts no matter where you define them in the file.
