--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "pug-plain-loader": "^1.0.0",
     "sass-loader": "^8.0.2",
     "style-resources-loader": "^1.2.1",
+    "vue-smooth-reflow": "^0.1.12",
     "vuex": "^3.1.1"
   }
 }
