--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "vue2-touch-events": "^2.3.2"
   },
   "devDependencies": {
-    "@gridsome/source-wordpress": "git+ssh://git@github.com:vdilly/custom-gridsome-source-wordpress.git",
+    "@gridsome/source-wordpress": "vdilly/custom-gridsome-source-wordpress#master",
     "colors": "^1.3.3",
     "gridsome-plugin-pug": "0.0.3",
     "gulp": "^4.0.2",
